hard-gists/6532334/run.log
=== Docker Run Log for 6532334 ===
Started at: Mi 29. Okt 16:34:56 CET 2025

[2025-10-29 16:34:56] START: Running container for 6532334
[2025-10-29 16:34:56] SUCCESS: Container 480d42b3ea06b41a129b7408fdb8278fbf8dc3651c84f8118675c4dcaf7b91bf started for 6532334
=== Container logs for 6532334 ===
  File "/snippet.py", line 56
    print "Warning: device does not exist",devName
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6532334 ===
[2025-10-29 16:34:58] INFO: Container 480d42b3ea06b41a129b7408fdb8278fbf8dc3651c84f8118675c4dcaf7b91bf has stopped
